venue-web/templates/ingress2/6.4.deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: venue-service
  namespace: venue-prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: venue
        version: v1
    spec:
      containers:
      - args:
        - supervisord
        - -c
        - ./supervisord.conf
        - --nodaemon
        command:
        - /entrypoint.sh
        name: django-service
        image: volentixlabs/venueserver:v0.0.18-beta
        ports:
        - containerPort: 8000
        #- containerPort: 9000
        #- containerPort: 5555
