venue-web/templates/ingress2/6.5.deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: venue-service
  namespace: venue-prod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: venue
        version: v1
    spec:
      containers:
      - args:
        - supervisord
        - -c
        - ./supervisord.conf
        - --nodaemon
        command:
        - /entrypoint.sh
        name: django-service
        #- image: volentixlabs/venueserver:v0.0.43-beta
        image: joemarct/venueserver:v0.0.43-beta
        ports:
        - containerPort: 8000
        #- containerPort: 9000 volentixlabs/venueserver:v0.0.27-beta
        #- containerPort: 5555 volentixlabs/venueserver:v0.0.26-beta
