venue-web/templates/ingress2/5.1.demo-1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-v1
  namespace: venue-prod
  labels:
    application: demo
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9090
      name: external
  selector:
    application: demo
    version: v1
