venue-web/templates/ingress2/6.1.rds.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service2
  namespace: venue-prod
spec:
  type: ExternalName
  externalName: venuepostgress.cksjgpgfbsbd.ca-central-1.rds.amazonaws.com
