venue-web/templates/ingress2/6.2.rds.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service-prod
  namespace: venue-prod
spec:
  type: ExternalName
  externalName: venuedbprod.cksjgpgfbsbd.ca-central-1.rds.amazonaws.com
