venue-web/templates/ingress2/6.5.service.yml
kind: Service
apiVersion: v1
metadata:
  name: venue-service
  namespace: venue-prod
  labels:
    application: venue
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
      name: external
  selector:
    application: venue
    version: v1
