venue-web/templates/ingress2/7.1.ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: venue-ui-service
  namespace: venue-prod
  labels:
    application: venue-ui
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
      name: external
  selector:
    application: venue-ui
    version: v1
