venue-web/templates/ingress2/5.2.ingress-demo-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demo-v1"
  namespace: venue-prod
  labels:
    application: demo
spec:
  rules:
  - host: "demo-app.venue.ninja"
    http:
      paths:
      - backend:
          serviceName: "demo-app-v1"
          servicePort: 80
